syntax = "proto3";

package streamhouse;

// StreamHouse Unified gRPC API
//
// Single service for the full StreamHouse product:
// - Admin: topic management
// - Producer: batch produce with ack modes, idempotent dedup, transactions
// - Consumer: consume, offset management
// - Producer lifecycle: init, transactions, heartbeat

service StreamHouse {
  // Admin Operations
  rpc CreateTopic(CreateTopicRequest) returns (CreateTopicResponse);
  rpc GetTopic(GetTopicRequest) returns (GetTopicResponse);
  rpc ListTopics(ListTopicsRequest) returns (ListTopicsResponse);
  rpc DeleteTopic(DeleteTopicRequest) returns (DeleteTopicResponse);

  // Producer Operations
  rpc Produce(ProduceRequest) returns (ProduceResponse);
  rpc ProduceBatch(ProduceBatchRequest) returns (ProduceBatchResponse);

  // Consumer Operations
  rpc Consume(ConsumeRequest) returns (ConsumeResponse);
  rpc CommitOffset(CommitOffsetRequest) returns (CommitOffsetResponse);
  rpc GetOffset(GetOffsetRequest) returns (GetOffsetResponse);

  // Producer Lifecycle
  rpc InitProducer(InitProducerRequest) returns (InitProducerResponse);
  rpc BeginTransaction(BeginTransactionRequest) returns (BeginTransactionResponse);
  rpc CommitTransaction(CommitTransactionRequest) returns (CommitTransactionResponse);
  rpc AbortTransaction(AbortTransactionRequest) returns (AbortTransactionResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

// ============================================================================
// Ack Mode
// ============================================================================

// Acknowledgment mode for durability vs latency trade-off.
enum AckMode {
  // Ack after record is buffered in memory.
  // Fast (~1ms) but data at risk until S3 flush (~30s window).
  ACK_BUFFERED = 0;

  // Ack after record is persisted to S3.
  // Slower (~200ms) but zero data loss. Uses batched group commit.
  ACK_DURABLE = 1;

  // Fire and forget - don't wait for any confirmation.
  ACK_NONE = 2;
}

// ============================================================================
// Admin Messages
// ============================================================================

message CreateTopicRequest {
  string name = 1;
  uint32 partition_count = 2;
  optional uint64 retention_ms = 3;
  map<string, string> config = 4;
}

message CreateTopicResponse {
  string topic_id = 1;
  uint32 partition_count = 2;
}

message GetTopicRequest {
  string name = 1;
}

message GetTopicResponse {
  Topic topic = 1;
}

message ListTopicsRequest {
  // Empty - lists all topics
}

message ListTopicsResponse {
  repeated Topic topics = 1;
}

message DeleteTopicRequest {
  string name = 1;
}

message DeleteTopicResponse {
  bool success = 1;
}

message Topic {
  string name = 1;
  uint32 partition_count = 2;
  optional uint64 retention_ms = 3;
  map<string, string> config = 4;
  uint64 created_at = 5;
}

// ============================================================================
// Producer Messages
// ============================================================================

message ProduceRequest {
  string topic = 1;
  uint32 partition = 2;
  bytes key = 3;
  bytes value = 4;
  map<string, string> headers = 5;
}

message ProduceResponse {
  uint64 offset = 1;
  uint64 timestamp = 2;
}

message ProduceBatchRequest {
  string topic = 1;
  uint32 partition = 2;
  repeated Record records = 3;

  // Idempotent producer fields
  optional string producer_id = 4;
  optional uint32 producer_epoch = 5;
  optional int64 base_sequence = 6;

  // Transaction fields
  optional string transaction_id = 7;

  // Ack mode (default: ACK_BUFFERED)
  AckMode ack_mode = 8;
}

message ProduceBatchResponse {
  uint64 first_offset = 1;
  uint64 last_offset = 2;
  uint32 count = 3;
  bool duplicates_filtered = 4;
}

message Record {
  bytes key = 1;
  bytes value = 2;
  map<string, string> headers = 3;
  uint64 timestamp = 4;
}

// ============================================================================
// Consumer Messages
// ============================================================================

message ConsumeRequest {
  string topic = 1;
  uint32 partition = 2;
  uint64 offset = 3;
  uint32 max_records = 4;
  optional string consumer_group = 5;
}

message ConsumeResponse {
  repeated ConsumedRecord records = 1;
  uint64 high_watermark = 2;
  bool has_more = 3;
}

message ConsumedRecord {
  uint64 offset = 1;
  uint64 timestamp = 2;
  bytes key = 3;
  bytes value = 4;
  map<string, string> headers = 5;
}

message CommitOffsetRequest {
  string consumer_group = 1;
  string topic = 2;
  uint32 partition = 3;
  uint64 offset = 4;
  optional string metadata = 5;
}

message CommitOffsetResponse {
  bool success = 1;
}

message GetOffsetRequest {
  string consumer_group = 1;
  string topic = 2;
  uint32 partition = 3;
}

message GetOffsetResponse {
  uint64 offset = 1;
  optional string metadata = 2;
}

// ============================================================================
// Producer Lifecycle Messages
// ============================================================================

message InitProducerRequest {
  optional string transactional_id = 1;
  optional string organization_id = 2;
  uint32 timeout_ms = 3;
  map<string, string> metadata = 4;
}

message InitProducerResponse {
  string producer_id = 1;
  uint32 epoch = 2;
}

message BeginTransactionRequest {
  string producer_id = 1;
  uint32 producer_epoch = 2;
  uint32 timeout_ms = 3;
}

message BeginTransactionResponse {
  string transaction_id = 1;
}

message CommitTransactionRequest {
  string producer_id = 1;
  uint32 producer_epoch = 2;
  string transaction_id = 3;
}

message CommitTransactionResponse {
  bool success = 1;
  uint64 commit_timestamp = 2;
}

message AbortTransactionRequest {
  string producer_id = 1;
  uint32 producer_epoch = 2;
  string transaction_id = 3;
}

message AbortTransactionResponse {
  bool success = 1;
}

message HeartbeatRequest {
  string producer_id = 1;
  uint32 producer_epoch = 2;
  optional string transaction_id = 3;
}

message HeartbeatResponse {
  bool valid = 1;
  optional string error = 2;
}
